--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,8 +3,12 @@
     "name": "My Extension",
     "version": "1.0",
     "description": "This extension is a starting point to create a real Chrome extension",
-    "permissions": ["storage"],
+    "permissions": ["activeTab"],
     "action": {
         "default_popup": "popup.html"
-    }
+    },
+    "background": {
+        "service_worker": "background.js"
+      }
+
 }
