--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "My Extension",
+    "name": "🫣 Intip SIAKAD",
     "version": "1.0",
     "description": "This extension is a starting point to create a real Chrome extension",
     "permissions": ["activeTab", "scripting"],
